--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-BR">
 <body>
 
-<img src="download.jpg" alt="W3Schools.com" width="150" height="150">
-<p><button>Sumario</button></p>
+<img src="download.jpg" alt="ME" width="150" height="150">
+<br><button>Download</button>
+
+<!--
+COMENTÁRIO...
+ -->
 
 <ul>
   <li>Coffee</li>
@@ -15,8 +19,8 @@
 <h1>Matheus Costa</h1>
 <h2>Biografia</h2>
 <a href="https://www.facebook.com/mattymcosta">Facebook</a>
-<p>
-oioioi
+<p style="color:blue" title="I'm a tooltip">
+<b> oioioi </b>
 </p>
 
 </body>
