--- a/index.html
+++ b/index.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<title>BIOGRAFIA</title>
-</head>
-<body>
-<h1>Matheus Costa</h1>
-
-<img src="download.jpg" alt="ME" width="150" height="150">
-<br><button>Download</button>
-
-
-<!--
-COMENTÁRIO...
- -->
-
-<ul>
-  <li><a href="mailto:matheus.costa@aluno.ifsp.edu.br">E-mail</a></li>
-  <li><a href="https://www.facebook.com/mattymcosta">Facebook</a></li>
-  <li><a href="https://www.instagram.com/mathmcosta">Instagram</a></li>
-  <li><a href="#t1">Bio</a></li>
-  <li><a href="#t2">Exp</a></li>
-</ul>
-
-
-<h2 id="t1">Biografia</h2>
-
-<p style="color:blue" title="I'm a tooltip">
-<b> oioioi </b>
-</p>
-
-<h2 id="t2">Experiência</h2>
-<p style="color:blue" title="I'm a tooltip">
-<b> oioioi </b>
-</p>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<title>BIOGRAFIA</title>
+	</head>
+	<body>
+		<h1>Matheus Costa</h1>
+		<img src="download.jpg" alt="ME" width="150" height="150">
+		<br><button>Download</button>
+	
+	
+		<!--
+		COMENTÁRIO...
+		-->
+		
+		<ul>
+			<li><a href="mailto:matheus.costa@aluno.ifsp.edu.br">E-mail</a></li>
+			<li><a href="https://www.facebook.com/mattymcosta">Facebook</a></li>
+			<li><a href="https://www.instagram.com/mathmcosta">Instagram</a></li>
+			<nav>
+				<li><a href="#t1">Bio</a></li>
+				<li><a href="#t2">Exp</a></li>
+			</nav>
+		</ul>
+		
+		
+		<h2 id="t1">Biografia</h2>
+		
+			<p style="color:blue" title="I'm a tooltip">
+			<b> oioioi </b>
+			</p>
+		
+		<h2 id="t2">Experiência</h2>
+			<p style="color:blue" title="I'm a tooltip">
+			<b> oioioi </b>
+			</p>
+		
+	</body>
 </html>
