--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<link rel="stylesheet" href="site.css">
 		<title>BIOGRAFIA</title>
 	</head>
 	<body>
