--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			<li><a href="https://www.facebook.com/mattymcosta">Facebook</a></li>
 			<li><a href="https://www.instagram.com/mathmcosta">Instagram</a></li>
 			<nav>
-				<li><a href="#t1">Bio</a></li>
-				<li><a href="#t2">Exp</a></li>
+				<li><a href="#t1">Sobre mim</a></li>
+				<li><a href="#t2">Experiência</a></li>
 			</nav>
 		</ul>
 		
 		
-		<h2 id="t1">Biografia</h2>
+		<h2 id="t1">Sobre mim</h2>
 		
 			<p style="color:blue" title="I'm a tooltip">
 			<b> Nascido em São Cristóvão, morador de Madureira
