Commit com reset.css

--- a/MeuSite/portfolio.html
+++ b/MeuSite/portfolio.html
@@ -4,7 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<link rel="stylesheet" href="site.css">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" href="css/site.css">
 		<title>BIOGRAFIA</title>
 	</head>
 
