Ajustes finos e correcoes do professor
Parte 2 da atividade 4

--- a/MeuSite/blog.html
+++ b/MeuSite/blog.html
@@ -8,27 +8,31 @@
 		<link rel="stylesheet" href="css/site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-		
+	<body>	
 		<h1>Blog</h1>
 		<div>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> Artigos do BLOG </b>
 			</p>
 		</div>
+		
+		
+		
+	</body>
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
 			<nav>
-				<ul style="list-style-type:none;">
+				<ul>
 			
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="bio.html">Sobre mim</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contato.html">Contato</a></li>
-				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
-				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
-				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+				<img src="Imagens/github.png" alt="GitHub link">
+				<img src="Imagens/linkedin.png" alt="GitHub link">
+				<img src="Imagens/twitter.png" alt="GitHub link">
 			</ul>
 			</nav>
 		</aside>
@@ -38,5 +42,5 @@
 				&copy; Matheus 2019
 		</footer>
 		
-	</body>
+	
 </html>
