--- a/MeuSite/portfolio.html
+++ b/MeuSite/portfolio.html
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" href="css/site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-
+	
+	<body>
 		
 		<h1>Portfolio</h1>
 		<div>
@@ -16,20 +17,23 @@
 			<b> Preencher com Portfolio </b>
 			</p>
 		</div>
+		
+	</body>
+		
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
 			<nav>
-				<ul style="list-style-type:none;">
+				<ul>
 			
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="bio.html">Sobre mim</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contato.html">Contato</a></li>
-				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
-				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
-				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+				<img src="Imagens/github.png" alt="GitHub link">
+				<img src="Imagens/linkedin.png" alt="GitHub link">
+				<img src="Imagens/twitter.png" alt="GitHub link">
 			</ul>
 			</nav>
 		</aside>
