--- a/MeuSite/contato.html
+++ b/MeuSite/contato.html
@@ -8,30 +8,31 @@
 		<link rel="stylesheet" href="css/site.css">
 		<title>BIOGRAFIA</title>
 	</head>
-		
+	<body>	
 	
-		
+	
 		<h1>Contatos</h1>
 		<div>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> E-mail: MrBreakMiudo@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
 			</p>
 		</div>
-		
+	</body>
+	
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
 			<nav>
-				<ul style="list-style-type:none;">
+				<ul>
 			
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="bio.html">Sobre mim</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contato.html">Contato</a></li>
-				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
-				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
-				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+				<img src="Imagens/github.png" alt="GitHub link">
+				<img src="Imagens/linkedin.png" alt="GitHub link">
+				<img src="Imagens/twitter.png" alt="GitHub link">
 			</ul>
 			</nav>
 		</aside>
@@ -41,5 +42,4 @@
 				&copy; Matheus 2019
 		</footer>
 		
-	</body>
 </html>
