--- a/MeuSite/index.html
+++ b/MeuSite/index.html
@@ -14,13 +14,12 @@
 		<h1>Matheus Costa</h1>
 		
 	
-	
 		<!--
 		COMENTÁRIO...
 		-->
 		
 		<nav>
-			<ul style="list-style-type:none;">
+			<ul>
 			
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
@@ -29,26 +28,13 @@
 				<li><a href="contato.html">Contato</a></li>
 				<li><a href="#t2">Experiência</a></li>
 				<li><a href="#t3">Objetivos</a></li>
-				<img src="Imagens/github.png" alt="GitHub link" href="https://github.com/matheuscostaIFSP/breakmiudo">
-				<img src="Imagens/linkedin.png" alt="GitHub link" href="https://linkedin.com/matheus.costa">
-				<img src="Imagens/twitter.png" alt="GitHub link" href="https://twitter.com/mathmcosta">
+				<img src="Imagens/github.png" alt="GitHub link">
+				<img src="Imagens/linkedin.png" alt="GitHub link">
+				<img src="Imagens/twitter.png" alt="GitHub link">
 			</ul>
 		</nav>
 	</aside>	
 	<body>
-		
-		<h2 id="t2">Experiência</h2>
-		<div>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Trabalho no ramo de TI há mais de 10 anos, tendo participado de projetos de desenvolvimento de software e arquitetura de sistemas. </b>
-			</p>
-		</div>
-		<h2 id="t3">Objetivos</h2>
-		<div>	
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Desejo aprofundar meus conhecimentos em SOA, especialmente microserviços, trabalhando com linguagens orientadas a objetos. Também almejo exercer funções gerenciais e de negócio. </b>
-			</p>
-		</div>
 		
 		
 		<footer>	
