--- a/MeuSite/index.html
+++ b/MeuSite/index.html
@@ -20,15 +20,14 @@
 		-->
 		
 		<nav>
-			<ul>
-			
+			<ul class="links-internos">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="bio.html">Sobre mim</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contato.html">Contato</a></li>
-				<li><a href="#t2">Experiência</a></li>
-				<li><a href="#t3">Objetivos</a></li>
+			</ul>
+			<ul class="icones-sociais">
 				<img src="Imagens/github.png" alt="GitHub link">
 				<img src="Imagens/linkedin.png" alt="GitHub link">
 				<img src="Imagens/twitter.png" alt="GitHub link">
