--- a/MeuSite/contato.html
+++ b/MeuSite/contato.html
@@ -24,17 +24,18 @@
 			<h2>Matheus Costa</h2>
 			
 			<nav>
-				<ul>
-			
-				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="bio.html">Sobre mim</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>
-				<img src="Imagens/github.png" alt="GitHub link">
-				<img src="Imagens/linkedin.png" alt="GitHub link">
-				<img src="Imagens/twitter.png" alt="GitHub link">
-			</ul>
+				<ul class="links-internos">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="bio.html">Sobre mim</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+				<ul class="icones-sociais">
+					<img src="Imagens/github.png" alt="GitHub link">
+					<img src="Imagens/linkedin.png" alt="GitHub link">
+					<img src="Imagens/twitter.png" alt="GitHub link">
+				</ul>
 			</nav>
 		</aside>
 		
