--- a/MeuSite/contato.html
+++ b/MeuSite/contato.html
@@ -9,17 +9,22 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 		<title>Contato</title>
 	</head>
-	<body>	
-	
-	
-		<h1>Contatos</h1>
+	<body class="grid-container">	
+		<header>
+			<h1>Contatos</h1>
+		</header>
+		
+		<main>
+		
+		<section>
 		<div>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> E-mail: MrBreakMiudo@gmail.com <br> Celular:11-94363-2748 <br> Residencial: 11-2847-3849 </b>
 			</p>
 		</div>
-	</body>
+		</section>
 	
+		</main>
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
@@ -43,5 +48,5 @@
 		
 				&copy; Matheus 2019
 		</footer>
-		
+	</body>	
 </html>
