--- a/MeuSite/portfolio.html
+++ b/MeuSite/portfolio.html
@@ -10,17 +10,21 @@
 		<title>Portfolio</title>
 	</head>
 	
-	<body>
+	<body class="grid-container">
+		<header>
+			<h1>Portfolio</h1>
+		</header>
 		
-		<h1>Portfolio</h1>
+		<main>
+		<section>
 		<div>
 			<p style="color:blue" title="I'm a tooltip">
 			<b> Preencher com Portfolio </b>
 			</p>
 		</div>
-		
-	</body>
-		
+		</section>
+	
+		</main>
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
@@ -33,15 +37,14 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 				<ul class="icones-sociais">
-					<img src="Imagens/github.png" alt="GitHub link">
-					<img src="Imagens/linkedin.png" alt="GitHub link">
-					<img src="Imagens/twitter.png" alt="GitHub link">
+					<li><a href="https://github.com" class="github">Github</a></li>
+					<li><a href="https://twitter.com" class="twitter">Twitter</a></li>
+					<li><a href="https://br.linkedin.com/pub" class="linkedin">LinkedIn</a></li>
 				</ul>
 			</nav>
 		</aside>
 		
 		<footer>
-		
 				&copy; Matheus 2019
 		</footer>
 		
