--- a/MeuSite/blog.html
+++ b/MeuSite/blog.html
@@ -9,17 +9,21 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 		<title>Blog</title>
 	</head>
-	<body>	
-		<h1>Blog</h1>
-		<div>
-			<p style="color:blue" title="I'm a tooltip">
-			<b> Artigos do BLOG </b>
-			</p>
-		</div>
+	<body class="grid-container">
+		<header>
+				<h1>Blog</h1>
+		</header>
 		
+		<main>
+		<section>
+			<div>
+				<p style="color:blue" title="I'm a tooltip">
+				<b> Artigos do BLOG </b>
+				</p>
+			</div>
+		</section>
+		</main>
 		
-		
-	</body>
 		<aside>	
 			<h2>Matheus Costa</h2>
 			
@@ -44,5 +48,5 @@
 				&copy; Matheus 2019
 		</footer>
 		
-	
+	</body>
 </html>
