--- a/MeuSite/index.html
+++ b/MeuSite/index.html
@@ -9,33 +9,33 @@
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 		<title>Home</title>
 	</head>
-		<img src="download.jpg" alt="ME" width="150" height="150">
-		<br><button>Download</button>
-	<aside>	
-		<h1>Matheus Costa</h1>
-		
+	<body class="grid-container">
+		<header>
+			<h1>Home</h1>
+		</header>
+		<main>
+			<img src="download.jpg" alt="ME" width="150" height="150">
+			<br><button>Download</button>
+		</main>
 	
-		<!--
-		COMENTÁRIO...
-		-->
-		
-		<nav>
-			<ul class="links-internos">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="bio.html">Sobre mim</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>
-			</ul>
-			<ul class="icones-sociais">
-				<img src="Imagens/github.png" alt="GitHub link">
-				<img src="Imagens/linkedin.png" alt="GitHub link">
-				<img src="Imagens/twitter.png" alt="GitHub link">
-			</ul>
-		</nav>
-	</aside>	
-	<body>
-		
+		<aside>	
+			<h2>Matheus Costa</h2>
+			<nav>
+				<ul class="links-internos">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="bio.html">Sobre mim</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+				<ul class="icones-sociais">
+					<img src="Imagens/github.png" alt="GitHub link">
+					<img src="Imagens/linkedin.png" alt="GitHub link">
+					<img src="Imagens/twitter.png" alt="GitHub link">
+				</ul>
+			</nav>
+		</aside>	
+	
 		
 		<footer>	
 				&copy; Matheus 2019
