--- a/ExerciciosJS/saudacoes.html
+++ b/ExerciciosJS/saudacoes.html
@@ -10,26 +10,11 @@
 	</head>
 	<body>
 	<h1>Javascript</h1>
+	
 	<h2>
-	<script>
-		var data = new Date();
-		var hora = data.getHours();
-		if (hora<12)
-			document.write("Bom dia");
-		else
-			if (hora>=12 && hora<18)
-				document.write("Boa tarde");
-			else
-				document.write("Boa Noite");
-	</script>
+		<script src="saudacoes.js"></script>
 	</h2>
 	<h3>
-	<script>
-				var altura = window.innerHeight;
-		var largura = window.innerWidth;
-		document.write("\nA altura é: "+altura);
-		document.write("\ne a largura é: "+largura+".");
-	</script>
 	</h3>
 	</body>	
 </html>
